--- a/index.html
+++ b/index.html
@@ -131,9 +131,14 @@
                 <a href="resume.html" target="_blank" class="px-8 py-4 bg-white text-blue-600 border border-blue-200 font-semibold rounded-lg hover:bg-blue-50 transition-all text-center">
                     View Resume
                 </a>
-                <a href="https://outlook.office.com/bookwithme/user/6edf5621ba4642f8a4c9e0b15c540bd3@luxbalance.com?anonymous&ismsaljsauthenabled&ep=plink" class="px-8 py-4 bg-white text-blue-600 border border-blue-200 font-semibold rounded-lg hover:bg-blue-50 transition-all text-center">
+
+                <a href="https://outlook.office.com/bookwithme/user/6edf5621ba4642f8a4c9e0b15c540bd3@luxbalance.com?anonymous&ismsaljsauthenabled&ep=plink" 
+                target="_blank" 
+                rel="noreferrer"
+                class="px-8 py-4 bg-white text-blue-600 border border-blue-200 font-semibold rounded-lg hover:bg-blue-50 transition-all text-center">
                     Let's Talk
-                </a>
+                </a>                
+                
             </div>
         </div>
     </div>
