--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Jille Kuipers Portfolio | Innovation & Technology Leader, Finance</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <meta name="description" content="10+ years leading digital transformations for Fortune 500s and scaling science-led ventures. Bridge the gap between strategic vision and execution.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.jillekuipers.com/">
+    <meta property="og:title" content="Jille Kuipers | Innovation & Technology Leader">
+    <meta property="og:description" content="€300M+ Portfolio Management | 20+ Global IP Positions | Y-Combinator Recognized.">
+    <meta property="og:image" content="https://www.jillekuipers.com/images/jille-kuipers.webp">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.jillekuipers.com/">
+    <meta property="twitter:title" content="Jille Kuipers | Innovation & Technology Leader">
+    <meta property="twitter:description" content="Bridging the gap between strategic vision and science-backed execution.">
+    <meta property="twitter:image" content="https://www.jillekuipers.com/images/jille-kuipers.webp">
+    
+
     <style>
         /* System font stack for native Apple feel */
         body {
