--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:url" content="https://www.jillekuipers.com/">
     <meta property="og:title" content="Jille Kuipers | Innovation & Technology Leader">
     <meta property="og:description" content="€300M+ Portfolio Management | 20+ Global IP Positions | Y-Combinator Recognized.">
-    <meta property="og:image" content="https://www.jillekuipers.com/images/jille-kuipers.webp">
+    <meta property="og:image" content="https://www.jillekuipers.com/images/jille-kuipers.jpg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.jillekuipers.com/">
     <meta property="twitter:title" content="Jille Kuipers | Innovation & Technology Leader">
     <meta property="twitter:description" content="Bridging the gap between strategic vision and science-backed execution.">
-    <meta property="twitter:image" content="https://www.jillekuipers.com/images/jille-kuipers.webp">
+    <meta property="twitter:image" content="https://www.jillekuipers.com/images/jille-kuipers.jpg">
     
 
     <style>
