--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="10+ years leading digital transformations for Fortune 500s and scaling science-led ventures. Bridge the gap between strategic vision and execution.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.jillekuipers.com/">
-    <meta property="og:title" content="Jille Kuipers | Innovation & Technology Leader">
-    <meta property="og:description" content="€300M+ Portfolio Management | 20+ Global IP Positions | Y-Combinator Recognized.">
+    <meta property="og:title" content="Jille Kuipers | Innovation & Technology Leader. Available for Leadership Role">
+    <meta property="og:description" content="Led startup from zero to 1M+ USD | Fortune500: €300M+ Pricing Portfolio Management.">
     <meta property="og:image" content="https://www.jillekuipers.com/images/jille-kuipers.jpg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.jillekuipers.com/">
@@ -19,6 +19,7 @@
     <meta property="twitter:image" content="https://www.jillekuipers.com/images/jille-kuipers.jpg">
     
 
+    
     <style>
         /* System font stack for native Apple feel */
         body {
@@ -109,6 +110,15 @@
             <div class="inline-block px-3 py-1 text-xs font-semibold tracking-wider text-blue-600 uppercase bg-blue-100 rounded-full">
                 Innovation & Technology Leader | Co-founder
             </div>
+
+
+<div class="inline-flex items-center space-x-2 px-3 py-1 text-xs font-bold tracking-wider text-emerald-600 uppercase bg-emerald-50 border border-emerald-100 rounded-full">
+    <span class="relative flex h-2 w-2">
+        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-emerald-400 opacity-75"></span>
+        <span class="relative inline-flex rounded-full h-2 w-2 bg-emerald-500"></span>
+    </span>
+    <span>Available for Leadership Roles</span>
+</div>
 
             <h1 class="text-4xl md:text-6xl lg:text-7xl font-bold tracking-tight text-slate-900 leading-[1.1]">
                 <span class="text-blue-600">Bridging the gap </span>between strategic vision and <span class="text-blue-600">science-backed execution</span> to create products that <span class="text-blue-600">people need.</span>
@@ -240,7 +250,7 @@
         <div class="lg:col-span-4 lg:sticky lg:top-32 space-y-6">
             <h2 class="text-4xl font-bold text-slate-900 tracking-tight">Helping you succeed</h2>
             <p class="text-xl text-blue-600 font-semibold leading-snug">
-                Open to leadership opportunities in Innovation, Tech, Digital transformation, and AI.
+                Available for leadership roles in Innovation, Tech Strategy, and AI-enabled Digital Transformation
             </p>
         </div>
 
