--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jille Kuipers Portfolio | Innovation & Technology Leader, Finance</title>
+    <link rel="canonical" href="https://www.jillekuipers.com/" />
     <script src="https://cdn.tailwindcss.com"></script>
 
     <meta name="description" content="10+ years leading digital transformations for Fortune 500s and scaling science-led ventures. Bridge the gap between strategic vision and execution.">
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.jillekuipers.com/">
     <meta property="og:title" content="Jille Kuipers | Innovation & Technology Leader. Available for Leadership Role">
-    <meta property="og:description" content="Led startup from zero to 1M+ USD | Fortune500: €300M+ Pricing Portfolio Management.">
-    <meta property="og:image" content="https://www.jillekuipers.com/images/jille-kuipers.jpg">
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.jillekuipers.com/">
-    <meta property="twitter:title" content="Jille Kuipers | Innovation & Technology Leader">
-    <meta property="twitter:description" content="Bridging the gap between strategic vision and science-backed execution.">
-    <meta property="twitter:image" content="https://www.jillekuipers.com/images/jille-kuipers.jpg">
+    <meta property="og:description" content="Led startup from zero to 1M+ USD | Fortune 500: €300M+ Pricing Portfolio Management.">
     
+    <meta property="og:image" content="https://www.jillekuipers.com/images/jille-kuipers-preview.jpg">
+    <meta property="og:image:secure_url" content="https://www.jillekuipers.com/images/jille-kuipers-preview.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://www.jillekuipers.com/">
+    <meta name="twitter:title" content="Jille Kuipers | Innovation & Technology Leader">
+    <meta name="twitter:description" content="Bridging the gap between strategic vision and science-backed execution.">
+    <meta name="twitter:image" content="https://www.jillekuipers.com/images/jille-kuipers-preview.jpg">
+
+    <meta name="theme-color" content="#f8fafc">
+    <link rel="apple-touch-icon" href="https://www.jillekuipers.com/images/jille-kuipers-preview.jpg">
 
     
     <style>
